src/test/ui/issues/issue-2XXXX/issue-24424.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-24424.rs:4:57
   |
LL | impl <'l0, 'l1, T0> Trait1<'l0, T0> for bool where T0 : Trait0<'l0>, T0 : Trait0<'l1> {}
   |                                                         ^^^^^^^^^^^ cannot infer type for type parameter `T0`
   |
   = note: cannot satisfy `T0: Trait0<'l0>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
